public/stylesheets/configuration/settings.css
#submit-button input {
    -moz-border-radius:10px;
    -webkit-border-radius:10px;
    background:#27292B none repeat scroll 0 0;
    color:#FFFFFF;
    font-family:arial;
    font-size:14px;
    font-weight:bold;
    margin:0px auto;
    margin-left:210px;
    margin-top:30px;
    padding:7px 12px;
    border:none;
    text-align:center;
    width:111px;
    cursor:pointer;
}
input#upload_datafile{
    height:30px;
}
form{
    margin:0px auto;
}
.box{
    margin: 0 auto;
    width: 560px;
}

